--- a/R/anomalies.Rmd
+++ b/R/anomalies.Rmd
@@ -30,11 +30,11 @@ ffd <- read.csv(here("data", "raw", "ffd202103.csv"),
                 col.names = c("year", "month", "flow", "divcode", "divdesc", "product", "value", "tonnes"))
 
 # Summarise by div
-# ffd <- ffd %>% 
-#         group_by(year, month, flow, divdesc) %>% 
-#         summarise(value = sum(value),
-#                   tonnes = sum(tonnes)) %>% 
-#         rename(product = divdesc)
+ffd <- ffd %>%
+        group_by(year, month, flow, divdesc) %>%
+        summarise(value = sum(value),
+                  tonnes = sum(tonnes)) %>%
+        rename(product = divdesc)
 
 
 # Value data setup -------------------------------------------------------------
